<resources>
    <string name="app_name">凤冈旅游</string>
    <string name="search_hint">想去哪里?输入目的地</string>
    <string name="action_settings">设置</string>
    <string name="load_text">努力加载中...</string>
    <!-- 注册协议说明文字 -->
    <string name="register_text">绑定手机不收取任何费用,一部手机只能
        			绑定一个账号,若需修改或解除已绑定的手机,请联系客服</string>
    <!--积分协议说明-->
    <string name="point_spec_title">*什么是积分</string>
    <string name="point_spec">积分是凤冈旅游APP诚挚回报会员的一种方式,是会员财富的象征。目前可使用积分进行消费抵扣。为了保障积分的价值以及公平,积分不支持人民币充值。</string>
    <string name="point_get_title">*如何赚取积分</string>
    <string name="point_get">1、注册:新用户注册可获取100积分,仅针对线上注册用户;\n2、购物:用户消费成功后获取与消费金额相应的积分,可获取积分=订单金额*1（即1元=1积分);\n3、评价:用户完成购物后并进行一次有效评价赚取10积分（仅限实物商品);</string>
    <string name="point_use_title">*积分的用途</string>
    <string name="point_use">消费抵扣:用户在消费支付时可使用积分进行抵扣,每100积分抵扣1元,抵扣无上限。</string>
    <string name="point_other_title">*其他注意事项</string>
    <string name="point_other">单个用户ID获取积分无上限,积分不可转移账户,积分永久有效。</string>

    <string name="coupon_spec">\?优惠券说明</string>
    <!--拼车规则-->
    <string name="carpooling_1">拼车发起人可以是拥有私家车的车主也可以是有出行计划的乘客。</string>
    <string name="carpooling_2">车主发起人发布自己的出行计划和车辆信息,乘客在平台进行下单预约并乘车。</string>
    <string name="carpooling_3">乘客发起人发布自己的出行计划和用车要求,车主可平台进行接单。</string>
    <string name="carpooling_4">车主/乘客在平台进行预约后需及时进行电话确认,以保证出行。</string>
    <string name="carpooling_5">拼车产生的费用不通过平台进行结算,统一由车主和乘客进行线下结算。如有问题,请咨询客服0551-65361041</string>
    <string name="carpooling_notice">以上活动最终解释权归八宿县神舟买买提电子商务有限公司所有</string>

    <string name="cancle">取消</string>
    <string name="ok">确定</string>
    <string name="text_begin">请开始说话…</string>
    <string name="app_id">5b34950a</string>


</resources>
